User expression should be visible even if the debugger is resumed (fixes also test script/watch/5639)

--- a/extension/skin/classic/dom.css
+++ b/extension/skin/classic/dom.css
@@ -232,3 +232,10 @@
 .domTable .objectBox-errorMessage .errorTitle {
     display: inline;
 }
+
+/* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
+
+/* Make sure the last row in the WatchPanel has a bottom border */
+.domTable .memberRow:last-child > TD {
+    border-bottom: 1px solid #BEBEBE;
+}
